## ------- Version 0.2.8 ---------------------------------------------- ##
- 

## ------- Version 0.2.7 ---------------------------------------------- ##
- Small fixes for Solaris compiler

## ------- Version 0.2.6 ---------------------------------------------- ##
- Add C-index splitting
- Fix NA SNP handling

## ------- Version 0.2.5 ---------------------------------------------- ##
- Fix matrix and gwaa alternative survival interface
- Version submitted to JSS

## ------- Version 0.2.4 ---------------------------------------------- ##
- Small changes in documentation

## ------- Version 0.2.3 ---------------------------------------------- ##
- Preallocate memory for splitting

## ------- Version 0.2.2 ---------------------------------------------- ##
- Remove recursive splitting

## ------- Version 0.2.1 ---------------------------------------------- ##
- Allow matrix as input data in R version

## ------- Version 0.2.0 ---------------------------------------------- ##
- Fix prediction of classification forests in R

## ------- Version 0.1.9 ---------------------------------------------- ##
- Speedup growing for continuous covariates
- Add memory save option to save memory for very large datasets (but slower)
- Remove memory mode option from R version since no performance gain

## ------- Version 0.1.8 ---------------------------------------------- ##
- Fix problems when using Rcpp <0.11.4

## ------- Version 0.1.7 ---------------------------------------------- ##
- Add option to split on unordered categorical covariates

## ------- Version 0.1.6 ---------------------------------------------- ##
- Optimize memory management for very large survival forests

## ------- Version  0.1.5 ---------------------------------------------- ##
- Set required Rcpp version to 0.11.2
- Fix large $call objects when using BatchJobs
- Add details and example on GenABEL usage to documentation
- Minor changes to documentation
